2006-11-10  Jakub Steiner <jimmac@ximian.com>

	* {22x22,24x24}/status/audio-volume-*: the 22x22 allows to have more
		detail.

2006-11-10  Jakub Steiner <jimmac@ximian.com>

	* 48x48/apps/config-users.png: remove old bitmap
	* system-users: add new icon at all sizes

2006-11-10  Jakub Steiner <jimmac@ximian.com>

	* 48x48/apps/gnome-window-manager.png:
	* 48x48/apps/gnome-settings-keybindings.png:
	* 48x48/apps/preferences-desktop-font.png:
	* 48x48/apps/preferences-desktop-theme.png: removed old bitmaps

2006-11-10  Jakub Steiner <jimmac@ximian.com>

	* preferences-desktop-theme.svg: convert linked offset to work
		around a rendering bug.

2006-11-09  Rodney Dawes  <dobey@novell.com>

	* configure.in: Update for 2.17.2.1 release

2006-11-09  Rodney Dawes  <dobey@novell.com>

	* */*/Makefile.am: Add nifty make check rule to check that all of the
	icons are listed in the Makefile.am to help prevent missing icons

2006-11-09  Rodney Dawes  <dobey@novell.com>

	* 16x16/actions/Makefile.am: Add missing bookmark-new
	* 16x16/mimetpes/Makefile.am: Add missing application-x-executable
	* 22x22/mimetypes/Makefile.am: Add missing text-x-preview
	* 22x22/status/Makefile.am: Add missing audio-volume-* icons
	* 24x24/actions/Makefile.am: Add missing folder-new
	* 24x24/apps/Makefile.am: Add missing preferences-system-windows
	* 32x32/devices/Makefile.am: Add missing computer

2006-11-07  Rodney Dawes  <dobey@novell.com>

	* configure.in: Update for 2.17.2 release

2006-10-28  Jakub Steiner <jimmac@ximian.com>

	* R 48x48/categories/applications-graphics.png
	* R 48x48/categories/applications-multimedia.png
	* R 48x48/categories/applications-office.png
	* R 48x48/categories/preferences-desktop.png: removed old bitmaps.
		Been replaced with SVGs.

2006-10-19  Jakub Steiner <jimmac@ximian.com>

	* application-office: new scalable by Josef Vybiral and Lapo
		Calamandrei. Touched up an hacked up the missing sizes.

2006-10-19  Jakub Steiner <jimmac@ximian.com>
