@@ -1,3 +1,9 @@
+2006-11-13  Rodney Dawes  <dobey@novell.com>
+
+	* index.theme.in: Add scalable/actions to the theme
+
+	Fixes #355576
+
 2006-11-10  Jakub Steiner <jimmac@ximian.com>
 
 	* {22x22,24x24}/status/audio-volume-*: the 22x22 allows to have more
